# agent-zero-trust

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: config-schema.md  examples.md  overview.md  real-project-validation-openhands.md  release-checklist.md  roadmap.md  rules.md  scoring-methodology.md  validation-targets.md
examples/: basic-chatbot.yaml  coding-agent.yaml
src/agent_zero_trust/: __init__.py  cli.py  config_schema.py  constants.py  findings.py  loader.py  report.py  rules_engine.py  scanner.py  scoring.py
src/agent_zero_trust/examples/: customer-support-agent.yaml  high-risk-agent.yaml  mcp-agent.yaml  rag-agent.yaml  sales-email-agent.yaml
src/agent_zero_trust/rules/: authentication.py  data_access.py  governance.py  identity.py  input_output_controls.py  logging.py  mcp.py  memory.py  permissions.py  rag.py  recovery.py  sandboxing.py  supply_chain.py  tools.py  traceability.py
tests/: test_cli.py  test_edge_cases.py  test_loader.py  test_reports.py  test_rule_inventory.py  test_rules_identity.py  test_rules_tools.py  test_schema.py  test_scoring.py  test_validation_targets.py  test_web_backend.py
validation-targets/: autogen-magentic-one-public-profile.yaml  autogpt-public-profile.yaml  crewai-public-profile.yaml  langchain-open-agent-platform-public-profile.yaml  openhands-doc-validated.yaml  openhands-public-profile.yaml
web/: README.md
web/backend/: __init__.py  app.py
web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
(+5 files in other folders)
