[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-zero-trust"
version = "0.1.0"
description = "Zero Trust readiness checker and blast-radius calculator for AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "agent-zero-trust contributors" }]
dependencies = [
  "jinja2>=3.1",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
agent-zero-trust = "agent_zero_trust.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_zero_trust"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
